--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 /* banner================ */
 
 .banner {
-    background-image: url(../img/banner/banner.png);
+    background: #002a3a;
+    position: relative;
 }
 
 h4.sm-title {
-    font-size: 23px;
+    font-size: clamp(16px, 2vw, 23px);
     color: var(--white-color);
     font-family: var(--title-font);
     margin-bottom: 15px;
@@ -13,10 +14,10 @@ h4.sm-title {
 }
 
 h1.title {
-    font-size: 52px;
+    font-size: clamp(30px, 5vw, 55px);
     color: var(--white-color);
     font-family: var(--title-font);
-    line-height: 70px;
+    /* line-height: 70px; */
     text-transform: uppercase;
 }
 
@@ -28,6 +29,20 @@ h1.title {
 
 .filter-tab-conten {
     padding: 20px;
+}
+
+.banner-img {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 0;
+    width: 50%;
+    height: 100%;
+}
+
+.banner-img img {
+    width: 100%;
+    height: 100%;
 }
 
 .filter-nav {
@@ -106,7 +121,7 @@ h1.title {
 
 .se-border::before {
     content: "";
-    border-right: 1px solid #ddd;
+    width: 1px;
     position: absolute;
     right: 0;
     display: block;
@@ -253,6 +268,10 @@ p.st-text {
     margin-top: 25px;
 }
 
+.swiper-pagination-bullet-active {
+    background: var(--main-color);
+}
+
 
 /* =======================================Delear section design ========= */
 
@@ -383,7 +402,7 @@ p.dealer-name:after {
 
 .service-card {
     background: #f9f9f9;
-    padding: 50px 35px;
+    padding: 35px;
 }
 
 .service-icon {
@@ -406,4 +425,63 @@ p.service-des {
 
 .service-icon img {
     width: 50px;
+}
+
+
+/* =======================================================Page banner ============ */
+
+.page-banner {
+    background: url(../img/banner/page-banner.png) no-repeat center;
+    background-size: cover;
+    height: 300px;
+    display: flex;
+    align-items: center;
+}
+
+.page-banner-text {
+    color: var(--white-color);
+}
+
+
+/* =============occasion============== */
+
+.route-url {
+    padding: 15px;
+}
+
+ul.url-list {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+}
+
+.url-link {
+    color: var(--text-color);
+    transition: .3s;
+}
+
+.url-link:hover {
+    color: var(--main-color);
+}
+
+.filter-area {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    background: var(--white-color);
+    padding: 20px 0;
+}
+
+.filter-col-5 {
+    padding: 0 15px;
+}
+
+.nice-select .list {
+    border-radius: 0;
+    box-shadow: -1px 11px 15px 1px rgb(68 68 68 / 6%);
+    margin: 0;
+    border-top: 2px solid #ddd;
+}
+
+.bg-wrap {
+    background-color: #E5E5E5;
 }
