--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -208,6 +208,11 @@ table.table {
     padding-bottom: 50px;
 }
 
+.cmy-4 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 
 /* ===========service============ */
 
