--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,6 +10,11 @@ a.top-contact-link {
     display: flex;
     align-items: center;
     font-size: 13px;
+    transition: .3s;
+}
+
+a.top-contact-link:hover {
+    color: var(--main-color);
 }
 
 .rating-review {
@@ -26,6 +31,7 @@ ul.rating-ul {
     align-items: center;
     margin-left: 20px;
     font-weight: 500;
+    font-family: var(--normal-font);
 }
 
 .rating-language {
@@ -62,6 +68,7 @@ img.contact-icon {
     border: none;
     font-weight: 700;
     font-family: var(--title-font);
+    padding-left: 10px;
 }
 
 .top-contact {
@@ -76,9 +83,9 @@ img.contact-icon {
 }
 
 .language-flug img {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
+    /* width: 20px; */
+    /* height: 20px; */
+    /* border-radius: 50%; */
 }
 
 .language .nice-select::after {
@@ -94,13 +101,61 @@ ul.rating-ul p {
 /*Hamburger-menu START CSS*/
 
 .hamburger-menu {
-    cursor: pointer;
-    /* position: absolute; */
-    right: 1.5rem;
+    position: relative;
     display: none;
-    /* z-index: 999; */
-    /* top: -1.5rem; */
-    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+    /* border: 3px solid #fff; */
+}
+
+.menu-btn__burger {
+    width: 40px;
+    height: 3px;
+    background: #343434;
+    border-radius: 5px;
+    /* box-shadow: 0 2px 5px rgb(18 19 20); */
+    transition: all .5s ease-in-out;
+}
+
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 3px;
+    background: #343434;
+    border-radius: 5px;
+    /* box-shadow: 0 2px 5px rgb(18 19 20); */
+    transition: all .5s ease-in-out;
+}
+
+.menu-btn__burger::before {
+    transform: translateY(-10px);
+}
+
+.menu-btn__burger::after {
+    transform: translateY(10px);
+}
+
+
+/* ANIMATION */
+
+.hamburger-menu.open .menu-btn__burger {
+    transform: translateX(-50px);
+    background: transparent;
+    box-shadow: none;
+}
+
+.hamburger-menu.open .menu-btn__burger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.hamburger-menu.open .menu-btn__burger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
 }
 
 
@@ -149,27 +204,18 @@ nav.navigation {
     right: 0;
 }
 
-.menu-close {
-    font-size: 30px;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--white-color);
-    margin: 5px;
-    border-radius: 50%;
-    position: absolute;
-    top: 5px;
-    cursor: pointer;
-    transition: .3s;
-    box-shadow: 0px 0px 12px 1px #002a3a21;
+.humbarger-language {
     display: none;
-    right: 5px;
+    align-items: center;
 }
 
 
 /* =====================================Footer============== */
+
+.footer-map .map {
+    width: 100%;
+    height: 140px;
+}
 
 .footer-area {
     background: var(--white-color);
