--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -32,7 +32,7 @@
         position: fixed;
         z-index: 90;
         width: 300px;
-        right: -100%;
+        right: -115%;
         background: var(--white-color);
         box-shadow: -7px 20px 20px 0px #00000014;
         top: 0;
@@ -68,6 +68,10 @@
     .banner-content-wrapper {
         height: 550px;
     }
+    .footer-map .map {
+        width: 100%;
+        height: 225px;
+    }
 }
 
 @media screen and (max-width:768px) {
@@ -90,6 +94,7 @@
         display: block;
         padding-top: 30px;
         text-align: center;
+        margin-bottom: 75px;
     }
     .dealer-info {
         padding: 70px 60px;
@@ -105,9 +110,16 @@
         padding-bottom: 0;
         border-bottom: none;
     }
+    .footer__nav {
+        display: block;
+        border-top: 1px solid #ddd;
+    }
+    .mapboxgl-canvas {
+        width: 100% !important;
+    }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:650px) {
     .occastion-head {
         display: block;
     }
@@ -123,6 +135,12 @@
     .banner-content-wrapper {
         height: auto;
         padding: 70px 0;
+    }
+    .occassions-tab {
+        margin-top: 20px;
+    }
+    .service-card {
+        padding: 40px 20px;
     }
 }
 
@@ -185,5 +203,9 @@
     }
     .language {
         display: none;
+    }
+    .dealer-contact-info h4 {
+        font-size: 24px;
+        margin-bottom: 5px;
     }
 }
